// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid render should render a Column 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 8.333333333333332%;
}

<div
    class="emotion-0"
    width="8.333333333333332%"
  >
    child
  </div>
</DocumentFragment>
`;

exports[`Grid render should render a Grid 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: size0;
}

<div
    class="emotion-0"
    data-paste-element="BOX"
    display="flex"
  >
    child
  </div>
</DocumentFragment>
`;

exports[`Grid render should render a Grid as any HTML element 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: size0;
}

<section
    class="emotion-0"
    data-paste-element="BOX"
    display="flex"
  >
    child
  </section>
</DocumentFragment>
`;

exports[`Grid render should render responsive css 1`] = `
<DocumentFragment>
  .emotion-2 {
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: spaceNegative10;
  margin-left: spaceNegative10;
  min-width: size0;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-right: spaceNegative20;
    margin-left: spaceNegative20;
  }
}

@media screen and (min-width:52em) {
  .emotion-2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-right: spaceNegative30;
    margin-left: spaceNegative30;
  }
}

.emotion-0 {
  width: 16.666666666666664%;
  padding-left: space10;
  padding-right: space10;
  margin-left: 66.66666666666666%;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    width: 33.33333333333333%;
    padding-left: space20;
    padding-right: space20;
    margin-left: 50%;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    width: 16.666666666666664%;
    padding-left: space30;
    padding-right: space30;
    margin-left: 66.66666666666666%;
  }
}

.emotion-1 {
  width: 50%;
  padding-left: space10;
  padding-right: space10;
  min-width: 100%;
  margin-left: space0;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    padding-left: space20;
    padding-right: space20;
    min-width: 100%;
  }
}

@media screen and (min-width:52em) {
  .emotion-1 {
    padding-left: space30;
    padding-right: space30;
    min-width: 0;
  }
}

<div
    class="emotion-2"
    data-paste-element="BOX"
    display="flex"
  >
    <div
      class="emotion-0"
      width="16.666666666666664%,33.33333333333333%,16.666666666666664%"
    />
    <div
      class="emotion-1"
      width="50%"
    />
  </div>
</DocumentFragment>
`;
